tests/shouldFail/j310c.c
int f();

int main(void){
	f(5);
	return 0;
}

int f(const int x){
	return x;
}
